2010-06-15  Kinuko Yasuda  <kinuko@chromium.org>

Reviewed by David Levin.

        Fix compilation errors in BlobBuilder with FILE_WRITER enabled
        https://bugs.webkit.org/show_bug.cgi?id=40606

        No functionality change so no new tests.

        * html/BlobBuilder.cpp:
        * html/BlobBuilder.h:


Canonical link: https://commits.webkit.org/52235@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61225 268f45cc-cd09-0410-ab3c-d52691b4dbfc